wiki: fix link reference issue

--- a/docs/module-docs/tmc-driver/tmc-5160/tmc-5160.md
+++ b/docs/module-docs/tmc-driver/tmc-5160/tmc-5160.md
@@ -38,7 +38,7 @@ TMC5160 是一款大功率步进电机驱动控制芯片，使用外置MOSFET，
 
 :::info[原理图 / Schematic]
 
-TMC 5160 原理图 [bigtreetech/BIGTREETECH-Stepper-Motor-Driver/TMC5160(T)/hardware/TMC5160-Schematic.pdf)](https://github.com/bigtreetech/BIGTREETECH-Stepper-Motor-Driver/blob/master/TMC5160(T)/hardware/TMC5160-Schematic.pdf)
+TMC 5160 原理图 [TMC5160-Schematic.pdf)](https://github.com/bigtreetech/BIGTREETECH-Stepper-Motor-Driver/blob/master/TMC5160(T)/hardware/TMC5160-Schematic.pdf)
 
 :::
 
