--- a/i18n/en/docusaurus-plugin-content-docs/current/board-docs/ebb-series/ebb-2209-rp2040/ebb-2209-rp2040.md
+++ b/i18n/en/docusaurus-plugin-content-docs/current/board-docs/ebb-series/ebb-2209-rp2040/ebb-2209-rp2040.md
@@ -18,21 +18,21 @@ import DocCardList from '@theme/DocCardList';
     width="45%" class="right-image"
 />
 
-## 简介
+## Introduction
 
-EBB 2209 (RP2040) 是一个适配 voron stealthburner 的工具头板。通过 CAN 线进行连接以简化工具头接线
+EBB 2209 (RP2040) is a toolhead board adapted for the Voron Stealthburner. It connects via a CAN line to simplify toolhead wiring.
 
-## 硬件规格
+## Hardware Specifications
 
-| Specification         | EBB 2209 RP2040                 |
-| --------------------- | ------------------------------- |
-| MCU                   | RP 2040                         |
-| 挤出机驱动            | TMC 2209                        |
-| 温度传感器 (TH0)      | NTC / PT1000                    |
-| 温度传感器 (MAX31865) | PT100 / PT1000 2 wire or 4 wire |
-| 热端最大电流          | 5A                              |
-| 风扇 2Pin             | x2                              |
-| 风扇 4Pin             | x1                              |
+| Specification                 | EBB 2209 RP2040                 |
+| ----------------------------- | ------------------------------- |
+| MCU                           | RP 2040                         |
+| Extruder Driver               | TMC 2209                        |
+| Temperature Sensor (TH0)      | NTC / PT1000                    |
+| Temperature Sensor (MAX31865) | PT100 / PT1000 2 wire or 4 wire |
+| Hotend Maximum Current        | 5A                              |
+| Fan 2Pin                      | x2                              |
+| Fan 4Pin                      | x1                              |
 
 </div>
 
