--- a/i18n/en/docusaurus-theme-classic/navbar.json
+++ b/i18n/en/docusaurus-theme-classic/navbar.json
@@ -26,5 +26,13 @@
   "item.label.Blog": {
     "message": "Blog",
     "description": "Navbar item with label Blog"
+  },
+  "item.label.Filament": {
+    "message": "Filament",
+    "description": "Navbar item with label Filament"
+  },
+  "item.label.Panda Series": {
+    "message": "Panda Series",
+    "description": "Navbar item with label Panda Series"
   }
 }
